[package]
name = "lumina-node"
version = "0.1.1"
edition = "2021"
license = "Apache-2.0"
description = "Celestia data availability node implementation in Rust"
authors = ["Eiger <hello@eiger.co>"]
homepage = "https://www.eiger.co"
repository = "https://github.com/eigerco/lumina"
readme = "README.md"
# crates.io is limited to 5 keywords and 5 categories
keywords = ["blockchain", "celestia", "lumina", "node"]
# Must be one of <https://crates.io/category_slugs>
categories = [
  "asynchronous",
  "cryptography::cryptocurrencies",
  "network-programming",
  "wasm",
]

[dependencies]
blockstore = { workspace = true }
celestia-proto = { workspace = true }
celestia-tendermint-proto = { workspace = true }
celestia-types = { workspace = true }
libp2p = { workspace = true, features = [
  "autonat",
  "ping",
  "gossipsub",
  "identify",
  "macros",
  "request-response",
  "kad",
] }

async-trait = "0.1.73"
beetswap = { git = "https://github.com/eigerco/beetswap", rev = "9316bd6" }
cid = { version = "0.11.0", features = ["serde-codec"] }
dashmap = "5.5.3"
futures = "0.3.28"
hex = "0.4.3"
instant = "0.1.12"
prost = "0.12.0"
rand = "0.8.5"
serde = { version = "1.0.164", features = ["derive"] }
smallvec = { version = "1.11.1", features = ["union", "const_generics"] }
thiserror = "1.0.48"
tokio = { version = "1.32.0", features = ["macros", "sync"] }
tokio-util = "0.7.9"
tracing = "0.1.37"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
backoff = { version = "0.4.0", features = ["tokio"] }
blockstore = { workspace = true, features = ["sled"] }
directories = "5.0.1"
# Upgrading this dependency invalidates existing persistent dbs.
# Those can be restored by migrating between versions:
# https://docs.rs/sled/latest/sled/struct.Db.html#examples-1
sled = "0.34.7"
tokio = { version = "1.32.0", features = ["rt-multi-thread", "time"] }
libp2p = { workspace = true, features = [
  "noise",
  "dns",
  "tcp",
  "tokio",
  "yamux",
  "quic",
] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
backoff = { version = "0.4.0", features = ["wasm-bindgen"] }
celestia-types = { workspace = true, features = ["wasm-bindgen"] }
getrandom = { version = "0.2.10", features = ["js"] }
gloo-timers = { version = "0.3.0", features = ["futures"] }
libp2p = { workspace = true, features = [
  "wasm-bindgen",
  "webtransport-websys",
] }
pin-project = "1.1.3"
rexie = "0.5.0"
send_wrapper = { version = "0.6.0", features = ["futures"] }
serde-wasm-bindgen = "0.6.0"
wasm-bindgen = "0.2.88"
wasm-bindgen-futures = "0.4.37"

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
function_name = "0.3.0"
wasm-bindgen-test = "0.3"

[dev-dependencies]
bytes = "1.4.0"
celestia-rpc = { workspace = true, features = ["p2p"] }
celestia-types = { workspace = true, features = ["test-utils"] }
dotenvy = "0.15.7"
# required to have path based dependency here to allow `cargo publish` to work
# https://github.com/rust-lang/cargo/pull/7333
lumina-node = { path = ".", features = ["test-utils"] }
serde_json = "1.0.107"
tempfile = "3.9.0"

[features]
test-utils = ["celestia-types/test-utils"]

[package.metadata.docs.rs]
features = ["test-utils"]
rustdoc-args = ["--cfg", "docs_rs"]
