[package]
name = "celestia-proto"
version = "0.9.1"
edition = "2021"
license = "Apache-2.0"
description = "Rust implementation of proto structs used in celestia ecosystem"
authors = ["Eiger <hello@eiger.co>"]
homepage = "https://www.eiger.co"
repository = "https://github.com/eigerco/lumina"
readme = "README.md"
# crates.io is limited to 5 keywords and 5 categories
keywords = ["blockchain", "celestia", "lumina"]
# Must be one of <https://crates.io/category_slugs>
categories = ["encoding", "cryptography::cryptocurrencies"]

[dependencies]
bytes = { version = "1.0", default-features = false, features = ["serde"]}
prost.workspace = true
prost-types.workspace = true
serde = { version = "1.0.203", features = ["derive"] }
subtle-encoding = { version = "0.5", default-features = false, features = ["std", "hex"] }
tendermint-proto.workspace = true
tonic = { version = "0.12.3", optional = true, default-features = false, features = [
  "codegen", "prost"
]}
uniffi = { version = "0.29.2", optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = { workspace = true, optional = true }

[build-dependencies]
prost-build.workspace = true
prost-types.workspace = true
protox = "0.7.1"
tonic-build = { version = "0.12.3", default-features = false, optional = true, features = [ "prost" ]}

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen-test.workspace = true

[dev-dependencies]
serde_json = "1.0.117"

[features]
tonic = ["dep:tonic", "dep:tonic-build"]
uniffi = ["dep:uniffi"]
wasm-bindgen  = ["dep:wasm-bindgen"]
