[package]
name = "celestia-proto"
version = "0.12.1"
edition.workspace = true
license = "Apache-2.0"
description = "Rust implementation of proto structs used in celestia ecosystem"
authors = ["Celestia <contact@celestia.org>"]
homepage = "https://www.celestia.org"
repository = "https://github.com/celestiaorg/lumina"
readme = "README.md"
rust-version = "1.85"
# crates.io is limited to 5 keywords and 5 categories
keywords = ["blockchain", "celestia", "lumina"]
# Must be one of <https://crates.io/category_slugs>
categories = ["encoding", "cryptography::cryptocurrencies"]

[dependencies]
bytes = { workspace = true, features = ["serde"]}
prost.workspace = true
prost-types.workspace = true
serde = { workspace = true, features = ["derive"] }
subtle-encoding = { version = "0.5", default-features = false, features = ["std", "hex"] }
tendermint-proto.workspace = true
tonic = { workspace = true, optional = true, features = ["codegen", "prost"]}
uniffi = { workspace = true, optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = { workspace = true, optional = true }

[build-dependencies]
prost-build.workspace = true
prost-types.workspace = true
protox.workspace = true
tonic-build = { workspace = true, features = ["prost"], optional = true }

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen-test.workspace = true

[dev-dependencies]
serde_json.workspace = true

[features]
tonic = ["dep:tonic", "dep:tonic-build"]
uniffi = ["dep:uniffi"]
wasm-bindgen  = ["dep:wasm-bindgen"]
