[package]
name = "celestia-types"
version = "0.10.1"
edition = "2021"
license = "Apache-2.0"
description = "Core types, traits and constants for working with the Celestia ecosystem"
authors = ["Eiger <hello@eiger.co>"]
homepage = "https://www.eiger.co"
repository = "https://github.com/eigerco/lumina"
readme = "README.md"
# crates.io is limited to 5 keywords and 5 categories
keywords = ["blockchain", "celestia", "lumina"]
# Must be one of <https://crates.io/category_slugs>
categories = ["encoding", "cryptography::cryptocurrencies"]

[dependencies]
blockstore.workspace = true
celestia-proto.workspace = true
nmt-rs = { workspace = true, features = ["serde"] }
prost.workspace = true
tendermint = { workspace = true, features = ["std", "rust-crypto", "secp256k1"] }
tendermint-proto.workspace = true

base64 = "0.22.1"
bech32 = "0.11.0"
bitvec = "1.0.1"
bytes = "1.6.0"
cid = { version = "0.11.1", default-features = false, features = ["std"] }
const_format = "0.2.32"
ed25519-consensus = { version = "2.1.0", optional = true }
enum_dispatch = "0.3.13"
leopard-codec = "0.1.0"
libp2p-identity = { version = "0.2.9", optional = true }
multiaddr = { version = "0.18.1", optional = true }
multihash = "0.19.1"
rand = { version = "0.8.5", optional = true }
ruint = { version = "1.12.3", features = ["serde"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_repr = "0.1.19"
sha2 = "0.10.6"
thiserror = "1.0.61"
time = { version = "0.3.36", default-features = false }

[target.'cfg(target_arch = "wasm32")'.dependencies]
js-sys = { version = "0.3.76", optional = true }
serde-wasm-bindgen = { version = "0.6.5", optional = true }
wasm-bindgen = { workspace = true, optional = true }

[dev-dependencies]
ed25519-consensus = "2.1.0"
rand = "0.8.5"
serde_json = "1.0.117"
bincode = "1.3.3"

# doc-tests
indoc = "2.0.5"

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
getrandom = { version = "0.2.15", features = ["js"] }
wasm-bindgen-test.workspace = true

[features]
default = ["p2p"]
p2p = ["dep:libp2p-identity", "dep:multiaddr"]
test-utils = ["dep:ed25519-consensus", "dep:rand"]
tonic = ["celestia-proto/tonic"]
wasm-bindgen = ["dep:js-sys", "dep:serde-wasm-bindgen", "dep:wasm-bindgen", "nmt-rs/serde", "time/wasm-bindgen"]

[package.metadata.docs.rs]
features = ["p2p", "test-utils"]
rustdoc-args = ["--cfg", "docsrs"]

[package.metadata.cargo-udeps.ignore]
development = ["indoc"]
