[package]
name = "lumina-utils"
version = "0.3.0"
edition = "2021"
license = "Apache-2.0"
description = "Platform abstraction utilities used across lumina project"
authors = ["Eiger <hello@eiger.co>"]
homepage = "https://www.eiger.co"
repository = "https://github.com/eigerco/lumina"
rust-version = "1.78"

[dependencies]
tokio = { workspace = true, optional = true }
tokio-util = { workspace = true, optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = { workspace = true, optional = true }
wasm-bindgen-futures = { workspace = true, optional = true }
gloo-timers = { workspace = true, optional = true }
futures = { workspace = true, optional = true }
pin-project = { workspace = true, optional = true }
send_wrapper = { workspace = true, optional = true }
wasm-bindgen-test = { workspace = true, optional = true }
web-time = { version = "1.1", optional = true }
js-sys = { workspace = true, optional = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros"] }
web-time = "1.1"

[features]
default = []
executor = ["token", "dep:tokio-util", "dep:tokio", "tokio/rt", "dep:wasm-bindgen", "dep:wasm-bindgen-futures", "dep:send_wrapper"]
token = ["dep:tokio-util"]
time = ["dep:gloo-timers", "dep:tokio", "tokio/time", "dep:send_wrapper", "dep:futures", "dep:pin-project", "dep:web-time"]
test-utils = ["dep:tokio", "tokio/macros", "dep:wasm-bindgen-test"]
make-object = ["dep:js-sys"]
