[package]
name = "lumina-utils"
version = "0.4.0"
edition = "2021"
license = "Apache-2.0"
description = "Platform abstraction utilities used across lumina project"
authors = ["Eiger <hello@eiger.co>"]
homepage = "https://www.eiger.co"
repository = "https://github.com/eigerco/lumina"

[dependencies]
tokio = { optional = true, version = "1.38.0", features = ["macros", "sync"] }
tokio-util = { optional = true, version = "0.7.11" }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = { optional = true, workspace = true }
wasm-bindgen-futures = { optional = true, version = "0.4.43" }
gloo-timers = { optional = true, version = "0.3.0", features = ["futures"] }
futures = { optional = true, version = "0.3.30" }
pin-project = { optional = true, version = "1.1.5" }
send_wrapper = { optional = true, version = "0.6.0", features = ["futures"] }
wasm-bindgen-test = { optional = true, workspace = true }
web-time = { optional = true, version = "1.1.0" }
js-sys = { optional = true, version = "0.3.77"}

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
# === This is a workaround! ===
# `lumina-utils` is used as an intermidiate crate and does not really use `tonic`,
# see [features] below for explanation.
tonic = { workspace = true, default-features = false, optional = true }

[dev-dependencies]
web-time = "1.1.0"

[features]
default = []
executor = ["token", "dep:tokio-util", "dep:tokio", "dep:wasm-bindgen", "dep:wasm-bindgen-futures", "dep:send_wrapper"]
token = ["dep:tokio-util"]
time = ["dep:gloo-timers", "dep:tokio", "dep:send_wrapper", "dep:futures", "dep:pin-project", "dep:web-time"]
test-utils = ["dep:wasm-bindgen-test"]
make-object = ["dep:js-sys"]

# Workaround is required, because we want to pass through `tls-*-roots` feature flags
# to tonic, to allow tls root configuration, but setting any of these flags breaks the
# wasm32 build (tonic pulls incompatible deps). It works by passing the flags though 
# this crate, which has tonic as dependency only for non-wasm32 targets. This effectively
# emulates missing `[target.'cfg(not(target = "wasm32"))'.features]` functionality.
tonic-tls-native-roots-except-wasm32 = ["dep:tonic", "tonic/tls-native-roots"]
tonic-tls-webpki-roots-except-wasm32 = ["dep:tonic", "tonic/tls-webpki-roots"]

[package.metadata.cargo-udeps.ignore]
normal = ["tonic"]
