[package]
name = "wasm-node"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
celestia-node = { workspace = true, features = ["test-utils"] }
celestia-types = { workspace = true, features = ["test-utils"] }

anyhow = "1.0.71"
console_error_panic_hook = "0.1.7"
futures-timer = { version = "3.0.2", features = ["wasm-bindgen"] }
js-sys = "0.3.64"
libp2p = "0.52.3"
serde = "1.0.189"
serde-wasm-bindgen = "0.6.0"
tracing = "0.1.37"
tracing-wasm = "0.2.1"
wasm-bindgen = "0.2.87"
wasm-bindgen-futures = "0.4.37"
web-sys = { version = "0.3.64", features = ["console"] }
serde_json = "1.0.107"

[dev-dependencies]
wasm-bindgen-test = "0.3.34"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
axum = "0.6.20"
clap = { version = "4.4.4", features = ["derive"] }
dotenvy = "0.15.7"
mime_guess = "2.0"
rust-embed = "8.0.0"
tokio = { version = "1.29.0", features = ["macros", "rt-multi-thread"] }
